Added SMTP/IMAP config settings and email sending API and created mail config settings page.

--- a/.env.local.example
+++ b/.env.local.example
@@ -5,3 +5,10 @@ NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=sb_publishable_v0SxpJZ4FrLWNqhB6rHKDw_g6EqA
 
 # Or use the legacy anon key name:
 # NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key
+
+# Mail config encryption (required for Mail Config Settings)
+# Generate: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+CREDENTIALS_ENCRYPTION_KEY=your_64_char_hex_string
+
+# n8n webhook for sending campaign emails (optional; has default)
+# SEND_MAIL_WEBHOOK_URL=https://n8n.srv1036993.hstgr.cloud/webhook-test/agentible-send-mail
