successfully migrated from using n8n to nodemailer to deliver mail using SMTP & IMAP to read messages.

--- a/.env.local.example
+++ b/.env.local.example
@@ -12,3 +12,9 @@ CREDENTIALS_ENCRYPTION_KEY=your_64_char_hex_string
 
 # n8n webhook for sending campaign emails (optional; has default)
 # SEND_MAIL_WEBHOOK_URL=https://n8n.srv1036993.hstgr.cloud/webhook-test/agentible-send-mail
+
+# Cron: sync inbound replies from IMAP (optional; omit to allow unauthenticated sync)
+# CRON_SECRET=your_random_secret
+
+# Supabase service role key (required for cron sync-replies; get from Project Settings → API)
+# SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
