--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.97.0",
     "imapflow": "^1.2.10",
+    "lucide-react": "^0.575.0",
     "mailparser": "^3.9.3",
     "next": "^14.2.0",
     "nodemailer": "^8.0.1",
